--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
 
     <main>
         <ul>
-            <li>Week 3: <a href="#">Assignment Link Home Page></a></li>
+            <li>Week 3: <a href="https://github.com/ericfaaliliu/ericfaaliliu.github.io/blob/master/Lab8-2.html">Assignment Link Home Page></a></li>
             <li>Week 4: Variable</li>
+            <li>Week 7: <a href="https://github.com/ericfaaliliu/ericfaaliliu.github.io/blob/master/Lab7-1.html">Compound Conditions / Logical Operators</a></li>
+            <li>Week 7: <a href="https://github.com/ericfaaliliu/ericfaaliliu.github.io/blob/master/Lab7-2.html">Compound Conditions / Logical Operators</a></li>
+            <li>Week 8: <a href="https://github.com/ericfaaliliu/ericfaaliliu.github.io/blob/master/Lab8-1.html">Repetition</a></li>
+            <li>Week 8: <a href="https://github.com/ericfaaliliu/ericfaaliliu.github.io/blob/master/Lab8-2.html">Repetition</a></li>
         </ul>
 
     </main>
